--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             data[key] = value;
         });
 
-        const scriptURL = 'PASTE_URL_APPS_SCRIPT_ANDA_DI_SINI'; // <-- PENTING! GANTIKAN URL
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbzA3idFG-0flY2rEf_rybn4VxGMOOscDx4IVdmN9Ai6v9iQu3nobR7C2OMh-XDzNtKF/exec'; // <-- PENTING! GANTIKAN URL
 
         fetch(scriptURL, {
             method: 'POST',
